Fixed header jumping when ADE enabled.

--- a/apollo-src/scss/apollo-linksequence.scss
+++ b/apollo-src/scss/apollo-linksequence.scss
@@ -27,6 +27,11 @@
 
 // head / foot formatted links
 
+.ap-linksequence-hf{
+	position: absolute !important;
+	width: 100%;
+}
+
 .ap-linksequence-hf .container {
     position: relative;
 }
